[package]
name = "authdecode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.3"
ark-poly = "0.3"
ark-poly-commit = "0.3"
commitment_dlog = { git = "https://github.com/o1-labs/proof-systems.git", rev = "c803ba53108b6081e920022a547f3069e07f7dc3" }
num-traits = "0.2"
rand_core = "0.6"

[dev-dependencies]
ark-bls12-381 = "0.3"
ark-ec = "0.3"
ark-std = "0.3"
ark-vesta = "0.3"
blake2 = "0.9"
rand = "0.8"

[features]
default = ["parallel", "rayon"]
parallel = ["ark-ff/parallel", "ark-poly/parallel", "ark-poly-commit/parallel"]
rayon = ["ark-ff/rayon", "ark-poly/rayon", "ark-poly-commit/rayon"]
std = ["ark-ff/std", "ark-poly/std", "ark-poly-commit/std"]
